JSPartie1Exo5Corrigé

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <form action="#" method="post">
       <div>
         <label for="number1">Nombre 1</label>
-        <input type="text" id="number1" name="number1">
+        <input type="text" id="number1" name="number1"/>
       </div>
       <div>
         <label for="number2">Nombre 2</label>
-        <input type="text" id="number2" name="number2"
+        <input type="text" id="number2" name="number2"/>
       </div>
       <div>
-        <button id="submit" name="result" onclick="division()">restOfDivision</button>
+        <button type="submit" name="result" onclick="division()">Reste de la division</button>
     </form>
-    <script type= "text/javascript" src="assets/script.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
